tg-6620. [FE] Cambiar nombre a servicio que maneja el formulario de factores de riesgo

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -344,9 +344,8 @@
 			</app-new-document-section>
 		</div>
 
-		<app-factores-de-riesgo-form
-			[showPreloadData]="factoresDeRiesgoNuevaConsultaService.getShowPreloadedRiskFactorsData()"
-			[factoresDeRiesgoNuevaConsultaService]="factoresDeRiesgoNuevaConsultaService">
+		<app-factores-de-riesgo-form [showPreloadData]="factoresDeRiesgoFormService.getShowPreloadedRiskFactorsData()"
+			[factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
 		</app-factores-de-riesgo-form>
 
 		<div id="alergias">
