tg-6503 [FE] Incorporar componente de factores de riesgo en el formulario de nuevo episodio

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
@@ -9,107 +9,9 @@
 		<form [formGroup]="riskFactorsForm">
 			<section id="risk-factors" fxLayout="column">
 				<h4 [translate]="'guardia.triage.RISK_FACTORS'"></h4>
-
-				<div fxLayout="column" fxFlex="grow shrink initial">
-					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-						<div fxLayout="column" formGroupName="heartRate">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
-								<input matInput type="number" id="heartRate" name="heartRate" formControlName="value"
-									placeholder="00">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'heartRate')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'heartRate').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time [effectiveTime]="riskFactorsForm.value.heartRate.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm,'heartRate')">
-							</app-effective-time>
-						</div>
-
-						<div fxLayout="column" formGroupName="respiratoryRate">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
-								<input matInput type="number" id="respiratoryRate" name="respiratoryRate"
-									formControlName="value" placeholder="00">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'respiratoryRate')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'respiratoryRate').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time [effectiveTime]="riskFactorsForm.value.respiratoryRate.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm,'respiratoryRate')">
-							</app-effective-time>
-						</div>
-					</div>
-
-					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-						<div fxLayout="column" formGroupName="temperature">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
-								<input matInput type="number" id="temperature" name="temperature"
-									formControlName="value" placeholder="00.0">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'temperature')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'temperature').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time [effectiveTime]="riskFactorsForm.value.temperature.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm, 'temperature')">
-							</app-effective-time>
-						</div>
-
-						<div fxLayout="column" formGroupName="bloodOxygenSaturation">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
-								<input matInput type="number" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
-									formControlName="value" placeholder="00">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'bloodOxygenSaturation')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'bloodOxygenSaturation').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time
-								[effectiveTime]="riskFactorsForm.value.bloodOxygenSaturation.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm, 'bloodOxygenSaturation')">
-							</app-effective-time>
-						</div>
-					</div>
-
-					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-						<div fxLayout="column" formGroupName="systolicBloodPressure">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
-								<input matInput type="number" id="systolicBloodPressure" name="systolicBloodPressure"
-									formControlName="value" placeholder="00">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'systolicBloodPressure')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'systolicBloodPressure').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time
-								[effectiveTime]="riskFactorsForm.value.systolicBloodPressure.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm, 'systolicBloodPressure')">
-							</app-effective-time>
-						</div>
-
-						<div fxLayout="column" formGroupName="diastolicBloodPressure">
-							<mat-form-field fxFlex="50%" appearance="outline">
-								<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
-								<input matInput type="number" id="diastolicBloodPressure" name="diastolicBloodPressure"
-									formControlName="value" placeholder="00">
-								<mat-error *ngIf="hasError(riskFactorsForm, 'min', 'diastolicBloodPressure')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]=" { min: getError(riskFactorsForm, 'min', 'diastolicBloodPressure').min }">
-								</mat-error>
-							</mat-form-field>
-							<app-effective-time
-								[effectiveTime]="riskFactorsForm.value.diastolicBloodPressure.effectiveTime"
-								(update)="riskFactorsFormService.setRiskFactorEffectiveTime($event, riskFactorsForm, 'diastolicBloodPressure')">
-							</app-effective-time>
-						</div>
-					</div>
-				</div>
+					<app-factores-de-riesgo-nueva-consulta
+						[factoresDeRiesgoNuevaConsultaService]="factoresDeRiesgoNuevaConsultaService">
+					</app-factores-de-riesgo-nueva-consulta>
 			</section>
 		</form>
 
