tg-6540 [BE/FE] Agregar el tipo de encuentro como info de la evolución

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
@@ -21,6 +21,10 @@ mat-selection-list {
 	max-height: 50vh;
 }
 
+.selection-documents {
+	min-width: 30vw;
+}
+
 .no-notes {
 	display: flex;
 	justify-content: center;
