tg-6519 [Mejora] La columna Clínica se debe cambiar por Institución en la información del rol del usuario

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/card-roles/card-roles.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/card-roles/card-roles.component.html
@@ -4,7 +4,7 @@
 			<mat-list>
 				<div>
 					<strong fxFlex="60%">{{'pacientes.card_roles.ROL_COLUMN' |translate}}:</strong>
-					<strong fxFlex="40%">{{'pacientes.card_roles.CLINIC_COLUMN' |translate}}:</strong>
+					<strong fxFlex="40%">{{'pacientes.card_roles.INSTITUTION_COLUMN' |translate}}:</strong>
 				</div>
 				<mat-list>
 
