--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -195,6 +195,10 @@
 								{{country.description}}
 							</mat-option>
 						</mat-select>
+						<button id="clear_address_country" type="button" mat-button *ngIf="form.value.addressCountryId" matSuffix
+							color="warn" mat-icon-button (click)="clear(form.controls.addressCountryId); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline" fxFlex.lt-sm="100">
@@ -205,6 +209,10 @@
 								{{province.description}}
 							</mat-option>
 						</mat-select>
+						<button id="clear_address_province" type="button" mat-button *ngIf="form.value.addressProvinceId" matSuffix
+							color="warn" mat-icon-button (click)="clear(form.controls.addressProvinceId); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline" fxFlex.lt-sm="100">
@@ -216,6 +224,10 @@
 								{{department.description}}
 							</mat-option>
 						</mat-select>
+						<button id="clear_address_departament" type="button" mat-button *ngIf="form.value.addressDepartmentId" matSuffix
+							color="warn" mat-icon-button (click)="clear(form.controls.addressDepartmentId); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline" fxFlex.lt-sm="100">
@@ -225,6 +237,10 @@
 								{{city.description}}
 							</mat-option>
 						</mat-select>
+						<button id="clear_address_city" type="button" mat-button *ngIf="form.value.addressCityId" matSuffix
+							color="warn" mat-icon-button (click)="clear(form.controls.addressCityId); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 					<mat-form-field appearance="outline" fxFlex.lt-sm="100">
 						<input id="addressPostcode" name="addressPostcode" formControlName="addressPostcode" maxlength="6"
