tg-6640 [FE] Agrega posibilidad de filtrar por diagnósticos no definidos.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -60,6 +60,12 @@
 						</mat-slide-toggle>
 					</mat-label>
 				</div>
+				<div class="without-diagnosis-toggle">
+					<mat-label>Sin diagnóstico definido
+						<mat-slide-toggle formControlName="documentsWithoutDiagnosis" (change)="showDocumentsWithoutDiagnosis()">
+						</mat-slide-toggle>
+					</mat-label>
+				</div>
 			</form>
 		</div>
 		<div class="documents" id="documents" fxLayout="row">
