--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
@@ -32,11 +32,10 @@ mat-selection-list {
 	text-align: center;
 }
 
-.main-diagnosis-toggle{
+.main-diagnosis-toggle, .without-diagnosis-toggle{
 	display: flex;
 	flex-direction: column;
 	margin: 7px;
-	align-items: center;
 }
 
 ::ng-deep .mat-line {
