--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
@@ -1,5 +1,5 @@
 <div class="margin-bottom">
-    <h2 class="mat-h2" [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.TITLE'"></h2>
+    <h2 class="mat-h2" [translate]="'historia-clinica.factores-de-riesgo-form.TITLE'"></h2>
     <div *ngIf="showPreloadData" class="dialog">
         <mat-icon online class="icon" color="primary">error_outline</mat-icon>
         <div class="info-text">
@@ -24,7 +24,7 @@
             <form fxLayout="column" fxLayoutGap="15px" [formGroup]="factoresDeRiesgoFormService.getForm()">
                 <div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
                     <div class="factores-de-riesgo-field" formGroupName="heartRate">
-                        <mat-label [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.HEART_RATE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.HEART_RATE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -43,8 +43,7 @@
                         </app-effective-time>
                     </div>
                     <div class="factores-de-riesgo-field" formGroupName="respiratoryRate">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.RESPIRATORY_RATE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.RESPIRATORY_RATE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -66,7 +65,7 @@
 
                 <div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
                     <div class="factores-de-riesgo-field" formGroupName="temperature">
-                        <mat-label [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.TEMPERATURE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.TEMPERATURE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -85,8 +84,7 @@
                         </app-effective-time>
                     </div>
                     <div class="factores-de-riesgo-field" formGroupName="bloodOxygenSaturation">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.BLOOD_OXYGEN_SATURATION'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.BLOOD_OXYGEN_SATURATION'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -109,8 +107,7 @@
 
                 <div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
                     <div class="factores-de-riesgo-field" formGroupName="systolicBloodPressure">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.SYSTOLIC_BLOOD_PRESSURE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.SYSTOLIC_BLOOD_PRESSURE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -131,8 +128,7 @@
                         </app-effective-time>
                     </div>
                     <div class="factores-de-riesgo-field" formGroupName="diastolicBloodPressure">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.DIASTOLIC_BLOOD_PRESSURE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.DIASTOLIC_BLOOD_PRESSURE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -157,7 +153,7 @@
 
                 <div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
                     <div class="factores-de-riesgo-field" formGroupName="bloodGlucose">
-                        <mat-label [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.BLOOD_GLUCOSE'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.BLOOD_GLUCOSE'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -176,8 +172,7 @@
                         </app-effective-time>
                     </div>
                     <div class="factores-de-riesgo-field" formGroupName="glycosylatedHemoglobin">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.GLYCOSYLATED_HEMOGLOBIN'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.GLYCOSYLATED_HEMOGLOBIN'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -200,8 +195,7 @@
 
                 <div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
                     <div class="factores-de-riesgo-field" formGroupName="cardiovascularRisk">
-                        <mat-label
-                            [translate]="'ambulatoria.paciente.nueva-consulta.factores-de-riesgo.CARDIOVASCULAR_RISK'">
+                        <mat-label [translate]="'historia-clinica.factores-de-riesgo-form.CARDIOVASCULAR_RISK'">
                         </mat-label>
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
