tg-6648. [FE] Quitar mensaje de recomendacion dentro del formulario de factores de riesgo

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/factores-de-riesgo-form/factores-de-riesgo-form.component.html
@@ -120,7 +120,7 @@
                                 </mat-icon>
                             </ng-container>
                         </div>
-                        <h5 class="recomendado recomendado-tension"
+                        <h5 *ngIf="showRecomendation" class="recomendado recomendado-tension"
                             [translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
                         <app-effective-time
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.systolicBloodPressure.effectiveTime"
@@ -142,7 +142,7 @@
                                 </mat-icon>
                             </ng-container>
                         </div>
-                        <h5 class="recomendado recomendado-tension"
+                        <h5 *ngIf="showRecomendation" class="recomendado recomendado-tension"
                             [translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
                         <app-effective-time
                             [effectiveTime]="factoresDeRiesgoFormService.getForm().value.diastolicBloodPressure.effectiveTime"
