--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -345,7 +345,7 @@
 		</div>
 
 		<app-factores-de-riesgo-form [showPreloadData]="factoresDeRiesgoFormService.getShowPreloadedRiskFactorsData()"
-			[factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
+			[showRecomendation]="true" [factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
 		</app-factores-de-riesgo-form>
 
 		<div id="alergias">
