--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
@@ -26,7 +26,8 @@
 			[datosAntropometricosNuevaConsultaService]="datosAntropometricosNuevaConsultaService">
 		</app-datos-antropometricos-nueva-consulta>
 
-		<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
+		<app-factores-de-riesgo-form [showRecomendation]="true"
+			[factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
 		</app-factores-de-riesgo-form>
 
 		<div id="problem">
