--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/evolution-note-dock-popup/evolution-note-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/evolution-note-dock-popup/evolution-note-dock-popup.component.html
@@ -142,7 +142,8 @@
 				</mat-card>
 			</div>
 			<div id="factores-de-riesgo" *appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
-				<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
+				<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService"
+					[showErrors]="true">
 				</app-factores-de-riesgo-form>
 			</div>
 			<div id="datos-antropometricos" *appHasRole="['ESPECIALISTA_MEDICO','ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
