--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
@@ -143,7 +143,8 @@
 			<app-medicacion [(medications)]="medications"></app-medicacion>
 		</div>
 		<div id="factores-de-riesgo">
-			<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
+			<app-factores-de-riesgo-form [factoresDeRiesgoFormService]="factoresDeRiesgoFormService"
+				[showErrors]="true">
 			</app-factores-de-riesgo-form>
 		</div>
 		<div id="observations">
