--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.scss
@@ -48,3 +48,29 @@
 	color: #a8a8a8;
 	padding-bottom: 20px;
 }
+
+.label {
+	border-radius: 6px;
+	font-weight: 500;
+	padding: 3px 15px;
+	font-size: 12px;
+	line-height: 19px;
+	width: 100px;
+	text-align:center;
+}
+
+.indicated {
+	background-color: #b0d2f0;
+	color: #1A73E8;
+}
+
+.suspended {
+	background-color: rgba(255, 163, 163, 0.93);
+	color: #EB5757;
+}
+
+.professional-elapsed-time {
+	font-weight: 400;
+	font-size: 12px;
+	color: #a8a8a8;
+}
