tg-6669 [FE] Crea modulo de Indicacion

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -214,7 +214,7 @@
 					</mat-tab>
 					<mat-tab id="tab_indications">
 						<ng-template mat-tab-label>
-							<span>{{ 'ambulatoria.paciente.indications.TAB_LABEL' | translate | uppercase }}</span>
+							<span>{{ 'indicacion.TITLE' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
 							<div *ngIf="hasInternmentEpisodeInThisInstitution">
