--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/historia-clinica-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/historia-clinica-mixins.scss
@@ -2,10 +2,12 @@
 @import "./modules/odontologia/odontologia-mixins.scss";
 @import "./modules/ambulatoria/modules/internacion/internacion-mixins.scss";
 @import "./components/factores-de-riesgo-form/factores-de-riesgo-form-theme.scss";
+@import "./modules/ambulatoria/modules/indicacion/indicacion-mixins.scss";
 
 @mixin historia-clinica-mixins($theme) {
     @include ambulatoria-mixins($theme);
     @include odontologia-mixins($theme);
     @include internacion-mixins($theme);
     @include app-factores-de-riesgo-form($theme);
+	@include indicacion-mixins($theme);
 }
