--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
@@ -14,7 +14,7 @@
 			</button>
 			<div *ngIf="isToday || isYesterday || isTomorrow">
 				<ng-container *ngIf="isToday; else yesterday">
-					<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.TODAY'"></span>
+					<span class="actual-date" [translate]="'indicacion.internment-card.TODAY'"></span>
 				</ng-container>
 			</div>
 			<div *ngIf="viewDay$ | async as viewDay" fxLayout="row" fxLayoutGap="4px" fxLayoutAlign="left center" class="actual-date">
@@ -30,7 +30,7 @@
 			<div id="diet">
 				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
 					<mat-icon class="color-primary">local_dining</mat-icon>
-					<span class="color-primary title">{{ 'ambulatoria.paciente.indications.internment-card.sections.DIET' | translate | uppercase }}</span>
+					<span class="color-primary title">{{ 'indicacion.internment-card.sections.DIET' | translate | uppercase }}</span>
 					<mat-divider></mat-divider>
 				</div>
 				<div *ngIf="dietsInCurrentView$ | async as diets">
@@ -54,7 +54,7 @@
 			<div id="parenteral_plans">
 				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
 					<mat-icon class="color-primary" svgIcon="parenteral_plans"></mat-icon>
-					<span class="color-primary title parenteral-plans">{{ 'ambulatoria.paciente.indications.internment-card.sections.PARENTERAL_PLAN'| translate | uppercase }}</span>
+					<span class="color-primary title parenteral-plans">{{ 'indicacion.internment-card.sections.PARENTERAL_PLAN'| translate | uppercase }}</span>
 					<mat-divider></mat-divider>
 				</div>
 				<div fxLayout="column" *ngTemplateOutlet="noParenteralPlan"></div>
@@ -63,7 +63,7 @@
 			<div id="pharmacos">
 				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
 					<mat-icon class="color-primary" svgIcon="pharmaco"></mat-icon>
-					<span class="color-primary title">{{'ambulatoria.paciente.indications.internment-card.sections.PHARMACO'| translate | uppercase }}</span>
+					<span class="color-primary title">{{'indicacion.internment-card.sections.PHARMACO'| translate | uppercase }}</span>
 					<mat-divider></mat-divider>
 				</div>
 				<div fxLayout="row" *ngTemplateOutlet="noPharmaco"></div>
@@ -72,7 +72,7 @@
 			<div id="other_indications">
 				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
 					<mat-icon class="color-primary">assignment_late</mat-icon>
-					<span class="color-primary title other-indications">{{'ambulatoria.paciente.indications.internment-card.sections.OTHER_INDICATION'| translate | uppercase }}</span>
+					<span class="color-primary title other-indications">{{'indicacion.internment-card.sections.OTHER_INDICATION'| translate | uppercase }}</span>
 					<mat-divider></mat-divider>
 				</div>
 				<div fxLayout="column" *ngTemplateOutlet="noOtherIndicaction"></div>
@@ -83,38 +83,38 @@
 
 <ng-template #yesterday>
 	<ng-container *ngIf="isYesterday else tomorrow">
-		<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.YESTERDAY'"></span>
+		<span class="actual-date" [translate]="'indicacion.internment-card.YESTERDAY'"></span>
 	</ng-container>
 </ng-template>
 <ng-template #tomorrow>
-	<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.TOMORROW'"></span>
+	<span class="actual-date" [translate]="'indicacion.internment-card.TOMORROW'"></span>
 </ng-template>
 <ng-template #noDiet>
 	<div class="no-data mat-typography">
-		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.DIET'"></span>
+		<span [translate]="'indicacion.internment-card.sections.no-data.DIET'"></span>
 	</div>
 </ng-template>
 <ng-template #noParenteralPlan>
 	<div class="no-data mat-typography">
-		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.PARENTERAL_PLAN'"></span>
+		<span [translate]="'indicacion.internment-card.sections.no-data.PARENTERAL_PLAN'"></span>
 	</div>
 </ng-template>
 <ng-template #noPharmaco>
 	<div class="no-data mat-typography">
-		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.PHARMACO'"></span>
+		<span [translate]="'indicacion.internment-card.sections.no-data.PHARMACO'"></span>
 	</div>
 </ng-template>
 <ng-template #noOtherIndicaction>
 	<div class="no-data mat-typography">
-		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.OTHER_INDICATION'"></span>
+		<span [translate]="'indicacion.internment-card.sections.no-data.OTHER_INDICATION'"></span>
 	</div>
 </ng-template>
 <ng-template #indicated>
 	<strong class="label indicated uppercase"
-			[translate]="'ambulatoria.paciente.indications.internment-card.sections.label.INDICATED'"></strong>
+			[translate]="'indicacion.internment-card.sections.label.INDICATED'"></strong>
 </ng-template>
 <ng-template #suspended>
 	<strong class="label suspended uppercase"
-			[translate]="'ambulatoria.paciente.indications.internment-card.sections.label.SUSPENDED'"></strong>
+			[translate]="'indicacion.internment-card.sections.label.SUSPENDED'"></strong>
 </ng-template>
 
