--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.scss
@@ -1,4 +1,4 @@
-@import "projects/hospital/src/assets/styles/mixins";
+@import "../../../../../../../../../assets/styles/mixins";
 
 .content {
 	margin: 20px 40px 20px 30px;
