tg-6676 Restauro FF y pestaña de odontología

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -259,6 +259,16 @@
 							</ng-container>
 						</ng-template>
 					</mat-tab>
+					<mat-tab id="tab_odontologia" *ngIf="odontologyEnabled">
+						<ng-template mat-tab-label>
+							<span>ODONTOLOGÍA</span>
+						</ng-template>
+						<ng-template matTabContent>
+							<app-odontogram (isOpenOdontologyConsultation)="setStateConsultationOdontology($event)"
+								(consultationCompleted)="updateFields($event)"></app-odontogram>
+						</ng-template>
+					</mat-tab>
+
 				</mat-tab-group>
 			</mat-card-content>
 		</mat-card>
