tg-6730 [FE] Agrega la visualización de las dietas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-diet-card/internment-diet-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-diet-card/internment-diet-card.component.html
@@ -1,3 +1,3 @@
 <app-content width="full">
-	<app-indication [header]="DIET" [contents]="[]" [noInformation]="'indicacion.internment-card.sections.no-data.DIET'"></app-indication>
+	<app-indication [header]="DIET" [contents]="indicationContent" [noInformation]="'indicacion.internment-card.sections.no-data.DIET'"></app-indication>
 </app-content>
