--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
@@ -16,6 +16,9 @@
 		<mat-spinner color="primary" *ngIf="!conceptsResultsTable && !snowstormServiceNotAvailable"></mat-spinner>
 	</div>
 	<div *ngIf="snowstormServiceNotAvailable">
+		<div style="padding-bottom: 1em">
+			<span style="font-weight: bold; padding-bottom: 2em" [translate]="'historia-clinica.snowstorm.ERROR_MESSAGE_DESCRIPTION'"></span>: {{snowstormServiceErrorMessage}}
+		</div>
 		<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
 	</div>
 	<app-table [model]="conceptsResultsTable" [mainStyle]="'secondary'"></app-table>
