--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/agregar-prescripcion-item/agregar-prescripcion-item.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/agregar-prescripcion-item/agregar-prescripcion-item.component.html
@@ -16,6 +16,9 @@
 	</div>
 
 	<div *ngIf="snowstormServiceNotAvailable">
+		<div style="padding-bottom: 1em">
+			<span style="font-weight: bold; padding-bottom: 2em" [translate]="'historia-clinica.snowstorm.ERROR_MESSAGE_DESCRIPTION'"></span>: {{snowstormServiceErrorMessage}}
+		</div>
 		<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
 	</div>
 
